# learn-qt6-cmake

./: .gitignore  README.md
BuildQuickApp/: CMakeLists.txt  main.cpp
BuildQuickAppWithCustomModule/: CMakeLists.txt
BuildQuickAppWithCustomModule/CControls/: CMakeLists.txt
BuildQuickAppWithSampleTranslations/: CMakeLists.txt  Main.qml  main.cpp
BuildQuickAppWithSampleTranslations/i18n/: qml_en.ts  qml_fr.ts  qml_jp.ts  qml_zh_CN.ts
BuildWidgetApp/: CMakeLists.txt
BuildWidgetAppWithLib/: CMakeLists.txt
BuildWidgetAppWithLib/src/app/: CMakeLists.txt
BuildWidgetAppWithLib/src/libcontrols/: CMakeLists.txt
BuildWidgetAppWithQRCResource/: CMakeLists.txt
BuildWidgetAppWithResource/: CMakeLists.txt  mainwindow.ui
BuildWidgetAppWithSubDir/: CMakeLists.txt
BuildWidgetAppWithSubDir/src/app/: CMakeLists.txt
BuildWidgetAppWithTranslations/: CMakeLists.txt  mainwindow.cpp
